--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ li a:hover {
 
 <ul>
   <li><a class="active" href="https://galien1.github.io/CryptoCounter/">Home</a></li>
-  <li><a href="#news">News</a></li>
+  <li><a href="https://galien1.github.io/CryptoCounterStaffFavorites/">Staff Favorites</a></li>
   <li><a href="#contact">Contact</a></li>
   <li><a href="#about">About</a></li>
 </ul>
