--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ li a:hover {
   <li><a href="https://galien1.github.io/CryptoCounterStaffFavorites/">Staff Favorites</a></li>
   <li><a href="#contact">Contact</a></li>
   <li><a href="#about">About</a></li>
+  <li><a href="https://galien1.github.io/CryptoCounterDonate/">Donate</a></li>
 </ul>
 
 <body>
