--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 
 <title>Crypto Counter</title>
 <head><link rel="icon" href="Favicon.ico">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-111933290-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-111933290-1');
+</script>
 <style>
 ul {
     list-style-type: none;
